@@ -1855,7 +1855,10 @@ RCS_getversion (rcs, tag, date, force_tag_match, simple_tag)
 	}
 
 	/* Work out the branch.  */
-	branch = RCS_whatbranch (rcs, tag);
+	if (! isdigit (tag[0]))
+	    branch = RCS_whatbranch (rcs, tag);
+	else
+	    branch = xstrdup (tag);
 
 	/* Fetch the revision of branch as of date.  */
 	rev = RCS_getdatebranch (rcs, date, branch);
@@ -2173,8 +2176,7 @@ RCS_nodeisbranch (rcs, rev)
 
 /*
  * Returns a pointer to malloc'ed memory which contains the branch
- * for the specified revision number or symbolic tag.  Magic branches
- * are handled correctly.
+ * for the specified *symbolic* tag.  Magic branches are handled correctly.
  */
 char *
 RCS_whatbranch (rcs, rev)
@@ -2189,19 +2191,14 @@ RCS_whatbranch (rcs, rev)
 	return ((char *) NULL);
 
     /* now, look for a match in the symbols list */
-    if (isdigit (*rev))
-	version = xstrdup (rev);
-    else
-    {
-	version = translate_symtag (rcs, rev);
-	if (version == NULL)
-	    return ((char *) NULL);
-    }
+    version = translate_symtag (rcs, rev);
+    if (version == NULL)
+	return ((char *) NULL);
     dots = numdots (version);
     if ((dots & 1) == 0)
 	return (version);
 
-    /* it's not a branch; see if it's magic */
+    /* got a symbolic tag match, but it's not a branch; see if it's magic */
     if (dots > 2)
     {
 	char *magic;
@@ -5034,6 +5031,9 @@ RCS_setbranch (rcs, rev)
 {
     if (rcs->flags & PARTIAL)
 	RCS_reparsercsfile (rcs, (FILE **) NULL, (struct rcsbuffer *) NULL);
+
+    if (rev && ! *rev)
+	rev = NULL;
 
     if (rev == NULL && rcs->branch == NULL)
 	return 0;
